scalfmt reformate the file

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,8 +1,14 @@
 version=3.7.13
 
-maxColumn = 90
-align.preset = more
 runner.dialect = scala3
 runner.dialectOverride.withAllowToplevelTerms = true
 runner.dialectOverride.withAllowEndMarker = true
 runner.dialectOverride.allowSignificantIndentation = true
+
+maxColumn = 75
+align.preset = more
+assumeStandardLibraryStripMargin = true
+rewrite.rules = [SortModifiers]
+
+spaces.beforeContextBoundColon=Never
+align.openParenCallSite = true
