--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,6 @@
 version=3.7.13
 
-runner.dialect = scala3
+runner.dialect = Scala3
 runner.dialectOverride.withAllowToplevelTerms = true
 runner.dialectOverride.withAllowEndMarker = true
 runner.dialectOverride.allowSignificantIndentation = true
